# dka

./: .gitignore  README.md  SKILL.md  pyproject.toml
examples/bisaya-commons/: dataset_card.md
examples/bisaya-commons/processed/: metadata.csv
examples/bisaya-commons/raw/: metadata.csv
examples/bisaya-commons/reports/: quality_report.json  quality_report.md
examples/bisaya-commons/splits/: test.csv  train.csv
examples/bisaya-web/: dataset_card.md  dka.yaml
examples/bisaya-web/exports/hf/: dev.csv  test.csv  train.csv
examples/bisaya-web/processed/: metadata.csv
examples/bisaya-web/raw/: metadata.csv  sugbo.ceb.srt
examples/bisaya-web/reports/: quality_report.json  quality_report.md
examples/bisaya-web/splits/: dev.csv  test.csv  train.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  wrangler.jsonc
frontend/src/: App.tsx  styles.css
scripts/: inference.py  train_whisper.py
src/dka/: cli.py  core.py
src/dka/adapters/: __init__.py  hf.py  pld.py
