[project]
name = "dka"
version = "0.1.0"
description = "Dataset kit assistant for Philippine speech datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.2",
  "rich>=13.7.0",
]

[project.scripts]
dka = "dka.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
