[project]
name = "dka-speech"
version = "0.1.2"
description = "Dataset kit assistant for Philippine speech datasets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Xynil Jhed Lacap" }]
keywords = ["speech", "datasets", "philippines", "whisper"]
dependencies = [
  "accelerate>=1.14.0",
  "datasets>=5.0.0",
  "evaluate>=0.4.6",
  "jiwer>=4.0.0",
  "pyyaml>=6.0.2",
  "rich>=13.7.0",
  "soundfile>=0.14.0",
  "torch>=2.12.1",
  "torchcodec>=0.14.0",
  "transformers>=5.12.1",
]

[project.scripts]
dka = "dka.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dka"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "twine>=6.2.0",
]
